<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical"
    tools:context=".activities.ChooseThreeActivity">

    <TextView
        android:id="@+id/nextChooseThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:fontFamily="@font/lato"
        android:padding="@dimen/space12"
        android:visibility="gone"
        android:text="@string/next"
        android:textColor="@color/navyBlueColor"
        android:textSize="@dimen/text16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space20"
        android:fontFamily="@font/lato"
        android:text="@string/there_you_go"
        android:textColor="@color/navyBlueColor"
        android:textSize="@dimen/text20"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/threeUserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space10"
        android:fontFamily="@font/lato"
        android:text="@string/follow_minimum_of_3_user_to_start"
        android:textColor="@color/grayColor"
        android:textSize="@dimen/text16"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/userSuggestRC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space10">

    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>